Настроено получение последних значений потоков при нажатии кнопки мыши (имитация отправки данных на сервер). Использован оператор withLatestFrom для получения последнего значения полученного потока

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
         <input id="quality" type="range">
         <input id="rating" type="range">
         <input id="actual" type="range">
-        <input type="text" name="" id="text">
+        <button id="send-result" type="button">Submit</button>
     </div>
 </section>
 </body>
