--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-<input type="text">
+<div class="form-group">
+    <label for="search">Search Comments by postId</label>
+    <input
+            type="number"
+            class="form-control"
+            id="search"
+            aria-describedby="emailHelp"
+            placeholder="Enter post Id">
+    </input>
+    <div class="container"></div>
+</div>
 </body>
 </html>
