Файлы примера 16 перенесены в отдельную папку.

--- a/16-HTML rendering from flow/index.html
+++ b/16-HTML rendering from flow/index.html
@@ -7,6 +7,16 @@
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-
+<div class="form-group">
+    <label for="search">Search Comments by postId</label>
+    <input
+            type="number"
+            class="form-control"
+            id="search"
+            aria-describedby="emailHelp"
+            placeholder="Enter post Id">
+    </input>
+    <div class="container"></div>
+</div>
 </body>
 </html>
